public/stylesheets/style.css
/* ... */
.new-add {
    border-radius: 999em;
}

.material-edit span,
.new-add span {
    position: absolute;
    top: 50%;
    left: 50%;
    margin-left: -11px;
    margin-top: -9px;
    -webkit-user-select: none;  /* Chrome all / Safari all */
    -moz-user-select: none;     /* Firefox all */
    -ms-user-select: none;      /* IE 10+ */
    user-select: none;
}
.new-add span {
    margin-top: -14px;
    margin-left: -5px;
    font-size: 18px;
}

.material-edit:hover,
.new-add:hover {
    background-color: rgba(0,0,0,0.5) !important;
    color: #fff;
    text-decoration: none;
}

.new-material-button {
    border-radius: 999em;
}

.tooltip {
    z-index: 25;
}

.tooltip-inner {
    border-radius: 0;
}

.popover {
    line-height: 1.4;
    font-size: 12px;
    border-radius: 0;
    border-color: #e6e6e6;
    border: 1px solid rgba(0,0,0,.1);
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.14) !important;
    -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.14) !important;
}

.popover.right>.arrow {
    border-right-color: #ededed;
    border-right-color:rgba(0,0,0,.1);
}
.popover.left>.arrow {
    border-left-color: #ededed;
    border-left-color:rgba(0,0,0,.1);
}

.popover-content {
    padding: 1px 5px;
}

.inner-display-icon img,
.inner-conveyor-icon img {
    margin-right: 5px;
    margin-top: -2px;
}

.inner-conveyor-icon {
    cursor: pointer;
    display: block;
}

textarea#description {
    max-width: 100%;
    min-width: 100px;
}

.enable-lines {
    white-space: pre-line;
}

/* without link */
.popover a.inner-conveyor-icon:hover {
    cursor: default;
    text-decoration: none;
}

.popover a.inner-conveyor-icon[href]:hover {
    cursor: pointer;;
    text-decoration: underline;
}

#scenario-text-container {
    margin-top: 20px;
}

.subject-labels {
    margin-right: 2px;
    font-weight: normal;
}

.only-print-title {
    display: none;
    margin-top: 15px;
}

@page { size: A4 landscape }

@media print {

    body {

        padding: 0;
        -webkit-print-color-adjust: exact;
    }

    .conveyor-container.top,
    .display-container.top,
    .conveyor-container.bottom,
    .display-container.bottom,
    .activity-container-hover,
    .material-container,
    .activity-container,
    .new-material-button.top,
    .new-material-button.bottom {
        box-shadow: none !important;
    }

    .main-content {
        padding: 0;
    }

    .scenario-page {
        display:  none;
    }

    .only-print-title {
        display: block !important;
    }

    .timeline-back-button {
        display:  none;
    }

    #scenario-timeline-wrapper {
        width: 100%;
        overflow: visible;
    }

    .footer .pull-left{
        display: none;
    }

    .footer .pull-right{
        display: none;
        position: fixed;
        bottom: 25mm;
        right: 25mm;
        margin-left: -70mm;
    }

    a[href]:after {
        content: none !important;
    }

    .scenario-text-container a {
        color: blue !important;
    }

    .only-print-title a {
        color: blue !important;
        text-decoration: underline;
    }

    a.link-for-print {
        color: blue !important;
        text-decoration: underline;
    }

    .p-with-links a {
        color: blue !important;
        text-decoration: underline;
    }

}

